dataset1235/2025-2/2947369575/users/4237658727/executions/3873599344_291286518.log
== SUBMISSION (2025-08-20 23:17:04)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite um numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite um numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite um numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite um numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite um numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:18:30)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:2"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:2512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:22468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:211356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:2888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:17:25)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:11))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:11))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:11))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:11))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:11))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:11))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:18:35)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:2"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:2512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:22468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:211356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:2888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:222
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:17:52)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:2))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:2))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:2))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:2))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:2))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:2))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:18:43)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:2"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:2512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:22468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:211356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:2888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:222
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:17:14)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:16:41)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite um numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite um numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite um numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite um numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite um numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:17:27)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:11))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:11))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:11))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:11))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:11))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:11))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:17:17)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input("Digite o numero:))
                    ^
SyntaxError: unterminated string literal (detected at line 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
